write error fix

--- a/css/style.css
+++ b/css/style.css
@@ -48,88 +48,7 @@ input {
 }
 
 h1, label, legend {
-   font-family: "Lato", sans-serif;
-}
-
-#blah{
-  border-radius: 50%;
-  width: 60px;
-}
-
-#signature{
-  width: 600px;
-  height: 80px;
-  border-bottom-color: #680EB5;
-  border-bottom: 1px;
-}
-
-#signature-photo{
-  width: 89.11px;
-  height: 80px;
-  float: left;
-}
-
-#signature-name{
-  font-family: "Lato", sans-serif;
-  width: 166.89px;
-  height: 80px;
-  float: left;
-}
-#sig-n{
-  padding-top: 14.19px;
-  width: 100px;
-  height: 50.88px;
-  float: left;
-}
-
-#signature-tel{
-  font-family: "Lato", sans-serif;
-  width: 189.78px;
-  height: 80px;
-  float: left;
-}
-#sig-t{
-  padding-top: 14.8px;
-  width: 104.68px;
-  height: 47px;
-  float: left;
-}
-
-#name{
-  font-size: 12px;
- font-family: "Lato", sans-serif ;
- color: rgb(104, 14, 181);
- font-weight: bold;
- text-align: left;
-}
-
-#position{
-font-size: 10px;
-color: rgb(85, 85, 85);
-font-weight: bold;
-text-align: left;
-}
-#email{
- font-size: 10px;
- font-family: "Lato", sans-serif;
- color: rgb(85, 85, 85);
- text-align: left;
-}
-
-#tel{
- font-size: 10px;
- text-align: left;
- color: rgb(85, 85, 85);
-}
-#skype {
- font-size: 10px;
- color: rgb(85, 85, 85);
- text-align: left;
-}
-#linkedin{
- font-size: 10px;
- color: rgb(85, 85, 85);
- text-align: left;
+   font-family: 'Lato', sans-serif;
 }
 
 #signature-brand{
