--- a/css/diretrizes.css
+++ b/css/diretrizes.css
@@ -8,7 +8,7 @@
 }
 .site {
  font-size: 10px;
- font-family: "Lato", sans-serif;
+ font-family: "Sans, Verdana", sans-serif;
  color: rgb(173, 174, 176);
  line-height: 1.301;
  text-align: left;
