Update fieldset color

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ fieldset
   max-width:400px;
   padding:16px;	
   border: dotted solid;
-  border-color: rgb(104, 14, 181);
+  border-color: #044c7d;
   border-width: 1px;
     -moz-border-radius:8px;
     -webkit-border-radius:8px;	
